--- a/src/views/authenticate.jade
+++ b/src/views/authenticate.jade
@@ -1,10 +1,14 @@
 extend layout
 block content
-	form(action = '/user/authenticated' method="post")
-		p Please Login To Your Account
-		label Email
-		input(type="text", name="email")
-		label Password
-		input(type="password", name="secret")
-		button(type="submit")
-			| Sign in
+	div(class = "col-md-6 col-md-offset-3 login-box")
+		form(action = '/user/authenticated' method="post", role='form')
+			h3 Please Login To Your Account
+			div(class = "form-group")
+				label Email
+				input(type="text", class="form-control", name="email", required)
+			div(class = "form-group")
+				label Password
+				input(type="password", class="form-control", name="secret", required)
+			div(class = "form-group text-center")
+				button(type="submit", class="btn btn-info sign-in-button col-md-8 col-md-offset-2")
+					| Sign In
