--- a/src/views/verify.jade
+++ b/src/views/verify.jade
@@ -1,8 +1,11 @@
 extend layout
 block content
-	form(action = '/user/verified' method="post")
-		input(type="hidden" name="vid" value="#{vid}")
-		p Please supply your verification code
-		input(type="text", name="mac")
-		button(type="submit")
-			| Sign in
+	div(class = "col-md-6 col-md-offset-3 login-box")
+		form(action = '/user/verified' method="post", role="form")
+			input(type="hidden" name="vid" value="#{vid}")
+			h3 Please supply your verification code
+			div(class = "form-group")
+				input(type="text", name="mac", class="form-control", required)
+			div(class = "form-group")
+				button(type="submit", class="btn btn-success col-md-8 col-md-offset-2")
+					| Sign in
